# typesound

./: README.md  pyproject.toml
typesound/: __init__.py  key-events
typesound/analysis/: jupyter-analysis.ipynb
typesound/gui/: __init__.py  basic_gui.py
typesound/keys/: __init__.py  keyRecorder.py
typesound/microphone/: __init__.py  audioRecorder.py
