[tool.poetry]
name = "typesound"
version = "0.1.0"
description = ""
authors = ["Andrew Nelson <andrewnelsonnyc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pynput = "^1.7.6"
keyboard = "^0.13.5"
scipy = "^1.11.4"

[tool.poetry.scripts]
start = "typesound:run"
gui = "typesound.gui.basic_gui:runGui"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
